--- a/.github/mattbot.yml
+++ b/.github/mattbot.yml
@@ -5,3 +5,5 @@ schemaCheck:
   paths:
     - path: schema.graphql
       mainBranch: master
+    - path: js/schema.graphql
+      mainBranch: master
