--- a/.github/mattbot.yml
+++ b/.github/mattbot.yml
@@ -9,3 +9,7 @@ schemaCheck:
       mainBranch: master
   rules:
     - FIELD_CHANGED_KIND
+    - FIELD_REMOVED
+    - TYPE_REMOVED
+    - ARG_REMOVED
+    - ARG_CHANGED_KIND
