--- a/.github/mattbot.yml
+++ b/.github/mattbot.yml
@@ -13,3 +13,5 @@ schemaCheck:
     - TYPE_REMOVED
     - ARG_REMOVED
     - ARG_CHANGED_KIND
+    - MISSING_FIELD_DESCRIPTION
+    - MISSING_TYPE_DESCRIPTION
