--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,9 @@ jobs:
           source_branch: daily-release
           destination_branch: master
           pr_title: "Pulling ${{ github.ref }} into master"
-          pr_body: ":crown: *An automated PR*"  # Full markdown support, requires pr_title to be set
-          pr_reviewer: "wei,worker"             # Comma-separated list (no spaces)
-          pr_assignee: "wei,worker"             # Comma-separated list (no spaces)
-          pr_label: "auto-pr"                   # Comma-separated list (no spaces)
-          pr_milestone: "Milestone 1"           # Milestone name
-          github_token: ${{ secrets.GITHUB_TOKEN }
+          pr_body: ":crown: *An automated PR*"               
+          pr_label: "auto-pr"                   
+          pr_milestone: "Milestone 1"           
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
